src/objects/Zuora__Refund__c.object
<CustomObject>
    <fields>
        <fullName>Person_Contact_Reference__c</fullName>
        <formula>Zuora__Account__r.PersonContact.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person Contact Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefundReason__c</fullName>
        <label>Refund Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>DD error</fullName>
                </value>
                <value>
                    <fullName>Emigration</fullName>
                </value>
                <value>
                    <fullName>Holiday Refund</fullName>
                </value>
                <value>
                    <fullName>Serious Illness</fullName>
                </value>
                <value>
                    <fullName>Indemnity</fullName>
                </value>
                <value>
                    <fullName>Marketed price issue</fullName>
                </value>
                <value>
                    <fullName>CC Error</fullName>
                </value>
                <value>
                    <fullName>Good will</fullName>
                </value>
                <value>
                    <fullName>Poor Eyesight</fullName>
                </value>
                <value>
                    <fullName>Review Of Personal Finances</fullName>
                </value>
                <value>
                    <fullName>Price Increase</fullName>
                </value>
                <value>
                    <fullName>Competitor Offer</fullName>
                </value>
                <value>
                    <fullName>Too Much To Read</fullName>
                </value>
                <value>
                    <fullName>Extended Holiday</fullName>
                </value>
                <value>
                    <fullName>Distribution Problems</fullName>
                </value>
                <value>
                    <fullName>Salesforce Error</fullName>
                </value>
                <value>
                    <fullName>Occasional Reader</fullName>
                </value>
                <value>
                    <fullName>Moved To a Care Home</fullName>
                </value>
                <value>
                    <fullName>Degregation in service</fullName>
                </value>
                <value>
                    <fullName>Usability</fullName>
                </value>
                <value>
                    <fullName>Editorial Content</fullName>
                </value>
                <value>
                    <fullName>App performance</fullName>
                </value>
                <value>
                    <fullName>No compatible devices</fullName>
                </value>
                <value>
                    <fullName>Functionality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refund_Mode__c</fullName>
        <description>Group system generated Vs manual refunds</description>
        <formula>CASE(Zuora__ReasonCodeName__c, 
&apos;Other&apos;, &apos;System Generated&apos;, 
&apos;Payment Rejection&apos;, &apos;System Generated&apos;, 
&apos;Payment Reversal&apos;, &apos;System Generated&apos;, 
&apos;Standard Refund&apos;, &apos;Agent Refund&apos;, 
&apos;NOT AVAILABLE&apos;)</formula>
        <inlineHelpText>If refund was system generated or Agent refunded manually</inlineHelpText>
        <label>Refund Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__RefundMethodType__c</fullName>
        <description>Denotes how an external refund was issued (paid out) to a customer.
This field is required if you are using external refunds.</description>
        <inlineHelpText>Denotes how an external refund was issued (paid out) to a customer.
This field is required if you are using external refunds.</inlineHelpText>
        <label>Refund Method Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACH,</fullName>
                </value>
                <value>
                    <fullName>Cash,</fullName>
                </value>
                <value>
                    <fullName>Cheque,</fullName>
                </value>
                <value>
                    <fullName>CreditCard,</fullName>
                </value>
                <value>
                    <fullName>PayPal,</fullName>
                </value>
                <value>
                    <fullName>WireTransfer,</fullName>
                </value>
                <value>
                    <fullName>DebitCard,</fullName>
                </value>
                <value>
                    <fullName>CreditCardReferenceTransaction</fullName>
                </value>
                <value>
                    <fullName>BankTransfer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>